[gd_scene load_steps=2 format=3 uid="uid://brolayobv28wj"]

[ext_resource type="Script" path="res://Screens/InterfaceWindows/ShapeKeysWindow.gd" id="1_oh5yb"]

[node name="ShapeKeysWindow" type="Window"]
initial_position = 4
size = Vector2i(420, 360)
visible = false
wrap_controls = true
mouse_passthrough = true
script = ExtResource("1_oh5yb")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HSplitContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="Tree" type="Tree" parent="ScrollContainer/PanelContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer/HBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
text = "Shape Key Binds"

[node name="ShapeBindFeatureOption" type="OptionButton" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
clip_text = true
fit_to_longest_item = false

[node name="ShapeBindFeatureOffsetValue" type="SpinBox" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.01
alignment = 3
prefix = "Offset"

[node name="ShapeBindFeatureScaleValue" type="SpinBox" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.01
value = 1.0
alignment = 3
prefix = "Scale"

[node name="ShapeBindFeatureCurrentValue" type="HSlider" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05
tick_count = 10
ticks_on_borders = true

[node name="ShapeBindFeatureClampMinValue" type="SpinBox" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01
alignment = 3
prefix = "Min"

[node name="ShapeBindFeatureClampMaxValue" type="SpinBox" parent="ScrollContainer/PanelContainer/HBox/VBoxContainer"]
visible = false
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01
alignment = 3
prefix = "Max"
